--- a/style.css
+++ b/style.css
@@ -24,11 +24,17 @@
     display: flex;
     border: 10px solid mistyrose;
     height: 100vh;
-    flex-wrap: wrap;
-    justify-content: center; /* Align the main axis */
-    align-content: center; /* Align the cross axis */
+    align-items: flex-start; /* Align the cross axis */
 }
 
 .box{
     width: 33.333%
+}
+
+.box2{
+    padding-bottom: 200px;
+}
+
+.box9{
+    align-self: flex-end;
 }
