--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 .box{
     color:white;
-    font-size: 100px;
+    font-size: 24px;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
     padding: 10px;
@@ -22,19 +22,12 @@
 
 .container{
     display: flex;
-    border: 10px solid mistyrose;
-    height: 100vh;
-    align-items: flex-start; /* Align the cross axis */
 }
 
 .box{
-    width: 33.333%
+    flex:1
 }
 
 .box2{
-    padding-bottom: 200px;
-}
-
-.box9{
-    align-self: flex-end;
+    flex:2
 }
