--- a/style.css
+++ b/style.css
@@ -24,10 +24,16 @@
     display: flex;
 }
 
-.box{
-    flex:1
+.box1{
+    flex-grow: 10;
+    flex-shrink: 5;
+    flex-basis: 400px;
 }
 
+/* .box1{ flex: 10 5 400px;} */
 .box2{
-    flex:2
+    flex-grow: 5;
+    flex-shrink: 1;
+    flex-basis: 400px;
 }
+/* .box2{ flex: 5 1 400px;} */
